basedir = $(kde_datadir)/krecipes/data
base_DATA = data-en_US.sql abbrev.txt weight.txt samples-en_US.kreml samples-cs_CZ.kreml property-data-en_US.txt ingredient-data-en_US.txt unit-data-en_US.txt prep-data-en_US.txt

mimetypedir = $(kde_mimedir)/application
mimetype_DATA = x-krecipes-backup.desktop x-krecipes-recipes.desktop
